# shadowmen

./: .gitignore  LICENSE.md  README.md  build_binaries.sh  buildozer.spec  kill.sh  pyproject.toml  requirements.txt  run.sh  shadowmen.py  shadowmen.spec
docs/: design_specification.md  polish-workflow.md
scripts/: build_linux.sh  build_mac.sh  build_windows.bat
shadowmen/: __init__.py  __main__.py  config.py  entities.py  genome.py  render.py  utils.py
shadowmen/ui/: overlay.py  panel.py
tests/: test_behavior.py  test_config.py  test_entities.py  test_genome.py  test_main.py  test_render.py  test_ui.py  test_utils.py
